<resources>
    <string name="app_name">Sudoku-Word-Omicron</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="sudoku">Sudoku Vocabulary</string>
    <string name="languages">English to French</string>
    <string name="language_selection">Language</string>
    <string name="trans_native">Translation-Native</string>
    <string name="native_trans">Native-Translation</string>
    <string name="difficulty_level">Level</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>
    <string name="share">logo</string>
    <string name="start">START NEW GAME</string>
    <string name="resume">RESUME</string>
    <string name="no_resume">No previous game played!</string>
    <string name="no_language">Language not supported!\nPlease check spelling in CSV Package!</string>
    <string name="languageselect">Supported Languages</string>
    <string name="mode_selection">Mode</string>
    <string name="stop_game">STOP GAME</string>
    <string name="upload">UPLOAD PACKAGE</string>
    <string name="remove">REMOVE PACKAGE</string>
    <string name="dict">Words</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="button_reset">Reset puzzle</string>
    <string name="button_undo">Undo last move</string>
    <string name="keypads">KEYPADS</string>
    <string name="upload_csv">UPLOAD CSV FILE</string>
    <string name="package_name">Name of Word Package</string>
    <string name="mStandard">Standard</string>
    <string name="mSpeech">Listening Comprehension</string>
    <string name="uploadInstruction">Sudoku Word allows you to import CSV files with your own vocabulary to practice. Easiest way is to download the CSV files from a website. These files should be stored in your "Downloads" folder, and accessible through the app. It is also possible to upload a file through Google Drive (you have to set up Google Drive on the emulator). Another possibility is to connect the device via USB to a computer, and upload the files to the Downloads directory, if your CSV files are stored on your computer, and not on your Android device. You may be required to press the vertical column with 3 dots on top right of screen to show additional storage options. This step is dependent on the Android version. For Android Oreo, you have to allow to show "internal storage", to access all features. This step is necessary on an emulator. For an emulator, since it is not a real phone, the easiest way is to manually put the CSV files in the phone\'s Downloads folder, using Android Studio. All other options work as well, but may be harder on an emulator. Additionally, the name of the Word Package should not exceed 35 characters. The format of a CSV file must contain exactly two columns with at least 9 words. All cells must not be empty and contain exactly 2 entries. The first row is interpreted as the language for the list of words under it. The CSV file must not contain any string delimiters. The app checks for correct CSV format. A correct format may look like:\n\nEnglish,French\nOne,Un\nTwo,Deux\n\nAnd so on.</string>
    <string-array name="arrLevel">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="arrLanguage">
        <item>Translation-Native</item>
        <item>Native-Translation</item>
    </string-array>
    <string-array name="arrMode">
        <item>Standard</item>
        <item>Listening Comprehension</item>
    </string-array>
    <string-array name="arrPuzzleSize">
        <item>4x4</item>
        <item>6x6</item>
        <item>9x9</item>
        <item>12x12</item>
    </string-array>
</resources>
