<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/mediumaquamarine"
	android:gravity="center"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/linearLayout"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:gravity="center"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="-10dp"
			android:layout_marginBottom="10dp"
			android:text="@string/sudoku"
			android:textColor="@color/translucent"
			android:textSize="30sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:orientation="vertical">

			<RadioGroup
				android:id="@+id/button_level"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="horizontal">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/difficulty_level"
					android:textSize="17sp" />

				<RadioButton
					android:id="@+id/button_easy"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="@string/easy_level"
					android:textSize="17sp" />

				<RadioButton
					android:id="@+id/button_medium"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/medium_level"
					android:textSize="17sp" />

				<RadioButton
					android:id="@+id/button_hard"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/hard_level"
					android:textSize="17sp" />

			</RadioGroup>

			<RadioGroup
				android:id="@+id/button_language"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="vertical"
				android:textSize="17sp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/language_selection"
					android:textSize="17sp" />


				<RadioButton
					android:id="@+id/button_eng_fr"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="@string/native_trans"
					android:textSize="17sp" />

				<RadioButton
					android:id="@+id/button_fr_eng"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/trans_native"
					android:textSize="17sp" />

			</RadioGroup>

			<RadioGroup
				android:id="@+id/button_mode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="vertical"
				android:textSize="17sp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/mode_selection"
					android:textSize="17sp" />

				<RadioButton
					android:id="@+id/button_mStandard"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="@string/mStandard"
					android:textSize="17sp" />

				<RadioButton
					android:id="@+id/button_mSpeech"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/mSpeech"
					android:textSize="17sp" />

			</RadioGroup>

		</LinearLayout>


		<Button
			android:id="@+id/button-start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:background="@drawable/hint"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:text="@string/start" />

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp">

			<Button
				android:id="@+id/button-resume"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/hint"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"

				android:text="@string/resume" />

			<Button
				android:id="@+id/button_stop"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/hint"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:text="@string/stop_game" />
		</LinearLayout>


		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="15dp">

			<Button
				android:id="@+id/btn_upload"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/hint"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:text="@string/upload" />

			<Button
				android:id="@+id/btn_remove"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/hint"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:text="@string/remove" />
		</LinearLayout>

		<ScrollView
			android:id="@+id/radio_scroll_view"
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:layout_marginTop="10dp"
			android:padding="10dp"
			android:background="@color/cadetblue">

			<RadioGroup
				android:id="@+id/pkg_radio_group"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" />

		</ScrollView>
	</LinearLayout>

</android.support.constraint.ConstraintLayout>
