<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	android:gravity="center"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/linearLayout"
		android:layout_width="0sp"
		android:layout_height="0sp"
		android:gravity="center"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">



		<ImageView
			android:layout_width="300sp"
			android:layout_height="300sp"
			android:src="@drawable/newlogo"/>





			<RadioGroup
				android:id="@+id/btn_type"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10sp"
				android:orientation="horizontal"
				android:textSize="17sp"
				android:buttonTint="@color/navy">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Puzzle Type"
					android:textSize="17sp" />

				<RadioButton
					android:id="@+id/btn_4x4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="4x4"
					android:textSize="17sp"
					android:buttonTint="@color/navy"/>

				<RadioButton
					android:id="@+id/btn_6x6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="6x6"
					android:textSize="17sp"
					android:buttonTint="@color/navy"/>

				<RadioButton
					android:id="@+id/btn_9x9"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="9x9"
					android:textSize="17sp"
					android:buttonTint="@color/navy"/>

				<RadioButton
					android:id="@+id/btn_12x12"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="12x12"
					android:textSize="17sp"
					android:buttonTint="@color/navy"/>

			</RadioGroup>



		<Button
			android:id="@+id/button-start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:background="@drawable/hint"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:text="@string/start"

			/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/button-resume"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/hint"
				android:paddingLeft="20sp"
				android:paddingRight="20sp"
				android:layout_marginRight="5sp"

				android:text="@string/resume" />

			<Button
				android:id="@+id/button_stop"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@drawable/hint"
				android:paddingLeft="20sp"
				android:paddingRight="20sp"
				android:layout_marginLeft="5sp"

				android:text="@string/stop_game" />
		</LinearLayout>


		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:layout_marginBottom="10sp">


			<Button
				android:id="@+id/btn_upload"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="5dp"
				android:background="@drawable/hint"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"

				android:text="@string/upload" />


			<Button
				android:id="@+id/btn_remove"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/hint"
				android:paddingLeft="20sp"
				android:paddingRight="20sp"
				android:layout_marginLeft="5dp"
				android:text="@string/remove"
/>
		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Available Packages: "/>

		<ScrollView
			android:id="@+id/radio_scroll_view"
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:layout_marginTop="10dp"
			android:padding="10dp">

			<RadioGroup
				android:id="@+id/pkg_radio_group"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" />

		</ScrollView>
	</LinearLayout>

</android.support.constraint.ConstraintLayout>
